tests/ui/form_data_unparsable.stderr
error[E0277]: the trait bound `for<'de> MyType: serde::de::Deserialize<'de>` is not satisfied
  --> $DIR/form_data_unparsable.rs:8:7
   |
8  |     foo: MyType
   |          ^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `MyType`
   |
   = note: required because of the requirements on the impl of `serde::de::DeserializeOwned` for `MyType`
   = note: required because of the requirements on the impl of `Parse<MyType>` for `Value<'_, gotham_formdata::Error>`
note: required by `gotham_formdata::private::Parse::parse`
  --> $DIR/mod.rs:99:2
   |
99 |     fn parse(self) -> Self::Fut;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
